修改登录界面和登录入口

--- a/app/src/main/res/drawable/shape_edit_text.xml
+++ b/app/src/main/res/drawable/shape_edit_text.xml
@@ -4,14 +4,14 @@
         <shape android:shape="rectangle">
             <corners android:radius="5dp"/>
             <stroke android:color="#ccc" android:width="0.5dp"/>
-            <solid android:color="@color/mian_background"/>
+            <solid android:color="#4Dffffff"/>
         </shape>
     </item>
     <item android:state_focused="true" >
         <shape android:shape="rectangle">
             <corners android:radius="5dp"/>
             <stroke android:color="@color/main_color" android:width="0.5dp"/>
-            <solid android:color="@color/mian_background"/>
+            <solid android:color="#4Dffffff"/>
         </shape>
     </item>
 </selector>
