--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:textColor="#fff"
                 android:textSize="16dp"
                 android:layout_marginLeft="10dp"
-                android:text="重庆市公安局江北区分局"
+                android:text="江北分局综合信息网"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <LinearLayout
