--- a/app/src/main/res/layout/fragment_duty.xml
+++ b/app/src/main/res/layout/fragment_duty.xml
@@ -25,6 +25,11 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+    <LinearLayout
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.fskj.gaj.view.NoDataView
         android:id="@+id/no_data"
         android:layout_width="match_parent"
@@ -33,4 +38,20 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+    <LinearLayout
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
+        <Button
+            android:id="@+id/btn_tongxunlu"
+            android:textSize="16dp"
+            android:textColor="@color/white"
+            android:background="@drawable/selector_btn_commit"
+            android:text="机关通讯录"
+            android:layout_width="match_parent"
+            android:layout_height="40dp" />
+    </LinearLayout>
 </LinearLayout>
