--- a/app/src/main/res/layout/activity_duty_list.xml
+++ b/app/src/main/res/layout/activity_duty_list.xml
@@ -34,14 +34,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:gravity="center_vertical|right"
                 android:text="新增值班"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:id="@+id/tv_add_duty"
                 android:textSize="14dp"
                 android:textColor="#fff"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="60dp"
+                android:layout_height="30dp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <!--选择日期-->
