--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -37,14 +37,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:gravity="center_vertical|right"
                 android:id="@+id/tv_sign"
                 android:textSize="14dp"
                 android:textColor="#fff"
                 android:text="签收"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="50dp"
+                android:layout_height="30dp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
