--- a/app/src/main/res/layout/fragment_attention.xml
+++ b/app/src/main/res/layout/fragment_attention.xml
@@ -27,14 +27,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:gravity="center_vertical|right"
                 android:id="@+id/tv_set"
                 android:text="设置"
                 android:textSize="14dp"
                 android:textColor="#fff"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="50dp"
+                android:layout_height="30dp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <com.fskj.gaj.view.NoDataView
