--- a/app/src/main/res/layout/activity_file_detail.xml
+++ b/app/src/main/res/layout/activity_file_detail.xml
@@ -4,12 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mian_background"
     android:orientation="vertical"
-    android:id="@+id/llParent"
-    tools:context="com.fskj.gaj.home.DailyPoliceWebActivity">
-
-
+    tools:context="com.fskj.gaj.FileDetailActivity">
     <android.support.v7.widget.Toolbar
         android:fitsSystemWindows="true"
         android:id="@+id/toolBar"
@@ -29,25 +25,33 @@
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize" />
             <TextView
+                android:layout_marginLeft="50dp"
+                android:layout_marginRight="50dp"
+                android:singleLine="true"
                 android:id="@+id/tv_title"
                 android:textColor="#fff"
-                android:text="每日警情"
+                android:text="文件浏览"
                 android:textSize="18dp"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+    <LinearLayout
+        android:padding="5dp"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:max="100" />
-
-    <WebView
-        android:id="@+id/webView"
+        android:layout_height="wrap_content">
+        <TextView
+            android:textColor="#999999"
+            android:textSize="10dp"
+            android:text="注意:网络不稳定或格式不支持时打开会失败"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+    <com.fskj.gaj.view.SuperFileView2
+        android:id="@+id/superFileView"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_height="match_parent"></com.fskj.gaj.view.SuperFileView2>
 </LinearLayout>
