--- a/app/src/main/res/layout/activity_file_detail.xml
+++ b/app/src/main/res/layout/activity_file_detail.xml
@@ -30,7 +30,7 @@
                 android:singleLine="true"
                 android:id="@+id/tv_title"
                 android:textColor="#fff"
-                android:text="文件浏览"
+                android:text="在线浏览"
                 android:textSize="18dp"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
