--- a/app/src/main/res/layout/activity_check_article.xml
+++ b/app/src/main/res/layout/activity_check_article.xml
@@ -36,7 +36,17 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.fskj.gaj.view.NoDataView
         android:id="@+id/no_data"
         android:layout_width="match_parent"
@@ -45,5 +55,8 @@
         android:id="@+id/xRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+    </LinearLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
