--- a/app/src/main/res/layout/fragment_common2.xml
+++ b/app/src/main/res/layout/fragment_common2.xml
@@ -6,6 +6,17 @@
     android:background="@color/mian_background"
     tools:context="com.fskj.gaj.home.fragment.Common2Fragment">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.fskj.gaj.view.NoDataView
         android:id="@+id/no_data"
         android:layout_width="match_parent"
@@ -14,5 +25,8 @@
         android:id="@+id/xRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+
+    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
