--- a/app/src/main/res/layout/activity_check_article_detail.xml
+++ b/app/src/main/res/layout/activity_check_article_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,6 +36,13 @@
                 android:layout_height="wrap_content" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ProgressBar
         android:layout_below="@+id/toolBar"
         android:id="@+id/progressBar"
@@ -44,21 +51,17 @@
         android:layout_height="3dp"
         android:max="100" />
     <WebView
-        android:layout_marginBottom="10dp"
-        android:layout_below="@+id/progressBar"
+
         android:layout_weight="1"
         android:id="@+id/webView"
         android:layout_above="@+id/llBottom"
-        android:paddingBottom="73dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></WebView>
     <LinearLayout
         android:id="@+id/llBottom"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_width="315dp"
-        android:layout_height="43dp">
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
 
         <TextView
             style="@style/txt_small_commit_empay"
@@ -67,9 +70,8 @@
             android:textColor="@color/main_color"
             android:id="@+id/tv_refuse"
             android:text="拒绝"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
+            android:layout_width="140dp"
+            android:layout_height="40dp" />
         <TextView
             android:layout_marginLeft="30dp"
             android:gravity="center"
@@ -78,8 +80,13 @@
             android:textColor="@color/white"
             android:id="@+id/tv_pass"
             android:text="通过"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
+            android:layout_width="140dp"
+            android:layout_height="40dp" />
     </LinearLayout>
-</RelativeLayout>
+    </LinearLayout>
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
+</LinearLayout>
