--- a/app/src/main/res/layout/activity_duty_list.xml
+++ b/app/src/main/res/layout/activity_duty_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#f5f6f7"
+    android:background="#fff"
     tools:context="com.fskj.gaj.profile.DutyListActivity">
     <android.support.v7.widget.Toolbar
         android:fitsSystemWindows="true"
@@ -45,48 +45,7 @@
                 android:layout_height="30dp" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
-    <!--选择日期-->
-    <!--<LinearLayout
-        android:visibility="gone"
-        android:layout_marginBottom="15dp"
-        android:gravity="center_vertical"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="315dp"
-        android:layout_height="40dp">
-        <TextView
-            android:text="时间选择"
-            android:textColor="#333"
-            android:textSize="16dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:id="@+id/llSelectDate"
-            android:background="@drawable/shape_rectangle"
-            android:paddingRight="10dp"
-            android:paddingLeft="10dp"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/tv_date"
-                android:text="2017-08-29"
-                android:textSize="16dp"
-                android:textColor="#999"
-                android:singleLine="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></LinearLayout>
-            <ImageView
-                android:src="@mipmap/img_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>-->
+
     <LinearLayout
         android:id="@+id/llSelectDate"
         android:paddingRight="15dp"
@@ -112,10 +71,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
+    <View
+        android:background="#f5f6f7"
+        android:layout_width="match_parent"
+        android:layout_height="1px"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <ListView
         android:layout_marginTop="1dp"
-        android:background="@color/white"
         android:id="@+id/listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></ListView>
@@ -124,4 +97,6 @@
         android:id="@+id/no_data"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.fskj.gaj.view.NoDataView>
+    </LinearLayout>
+    </FrameLayout>
 </LinearLayout>
