--- a/app/src/main/res/layout/activity_file_detail.xml
+++ b/app/src/main/res/layout/activity_file_detail.xml
@@ -49,9 +49,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.fskj.gaj.view.SuperFileView2
         android:id="@+id/superFileView"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.fskj.gaj.view.SuperFileView2>
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 </LinearLayout>
