--- a/app/src/main/res/layout/activity_tongxunlu.xml
+++ b/app/src/main/res/layout/activity_tongxunlu.xml
@@ -36,9 +36,16 @@
     </android.support.v7.widget.Toolbar>
 
 
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></WebView>
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 </LinearLayout>
