--- a/app/src/main/res/layout/fragment_duty.xml
+++ b/app/src/main/res/layout/fragment_duty.xml
@@ -26,6 +26,17 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <com.fskj.gaj.view.ShuiyinView
+            android:clickable="false"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_weight="1"
         android:orientation="vertical"
@@ -56,4 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp" />
     </LinearLayout>
+    </LinearLayout>
+
+    </FrameLayout>
 </LinearLayout>
