--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,36 +8,39 @@
     tools:context="com.fskj.gaj.home.HomeFragment">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp"
         android:background="@color/main_color"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         >
-        <LinearLayout
+        <RelativeLayout
             android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
+                android:layout_marginLeft="15dp"
+                android:layout_centerVertical="true"
                 android:src="@mipmap/img_logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:layout_centerInParent="true"
                 android:textColor="#fff"
-                android:textSize="16dp"
+                android:textSize="20dp"
                 android:layout_marginLeft="10dp"
                 android:text="江北分局综合信息网"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></LinearLayout>
+
             <ImageView
+                android:layout_alignParentRight="true"
                 android:scaleType="center"
                 android:src="@mipmap/img_search"
                 android:id="@+id/img_search"
                 android:layout_width="?attr/actionBarSize"
                 android:layout_height="?attr/actionBarSize" />
-        </LinearLayout>
+        </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     <android.support.design.widget.TabLayout
         android:id="@+id/tabLayout"
