--- a/app/src/main/res/layout/fragment_recommand.xml
+++ b/app/src/main/res/layout/fragment_recommand.xml
@@ -6,6 +6,19 @@
     android:orientation="vertical"
     tools:context="com.fskj.gaj.home.fragment.RecommandFragment">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.fskj.gaj.view.ShuiyinView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+     <LinearLayout
+         android:orientation="vertical"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
+
     <com.fskj.gaj.view.NoDataView
         android:id="@+id/no_data"
         android:layout_width="match_parent"
@@ -15,5 +28,7 @@
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
+     </LinearLayout>
 
+    </FrameLayout>
 </LinearLayout>
